# OpenBugger

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
interactive/: modelexplorer.py
logic/: logic_injector_output_example.py
notebooks/: ast_notebook.ipynb  cst_mutators_examples.ipynb  python-to-ast-example.ipynb
openbugger/controllers/: buggydatacreation.py  bugselectorserver.py  datageneratingpipeline_coordinator.py  datageneratingpipeline_worker.py  detectordatascoringworker.py  detectortrainingdatabuffer.py  packageextracttodisk.py  staticdatasetextractor.py  trainbugdetector.py  trainbugselector.py
openbugger/controllers/helper/: dummybugselectorclient.py  dummydatageneratingpipeline.py  dummydatasubscriber.py  randombugselectorserver.py  unittestfilter.py
openbugger/data/: filter_candidates_to_bugtype.py  filter_data_to_cubert.py  split.py  stats.py
openbugger/data/deduplication/: __main__.py  index.py  tokenizers.py
openbugger/data/diffmining/: extract.py  get_pypibugs.py  mining.py
openbugger/data/pypi/: venv.py
openbugger/datasets/: dataloading.py
openbugger/models/: basemodel.py  evaluate.py  gnn.py  gnnlayerdefs.py  greatreimplementation.py  modelregistry.py  seqmodel.py  train.py  trainandeval.py  traingreat.py  utils.py  visualize.py
openbugger/mutations/: __init__.py  remove_annotations.py  rewrite_ops.py  rewrite_scouts.py  semantics_preserving.py
openbugger/representations/: asdot.py  codereprs.py  data.py
openbugger/utils/: cstutils.py  logging.py  msgpackutils.py  replaybuffer.py  runtime.py  text.py
(+18 files in other folders)
