[tool.poetry]
name = "openbugger"
version = "0.1.0"
description = "A professional bugging tool for python"
authors = [
    "Tommaso Furnarello <tommaso@gmail.com>",
    "Fabrizio Milo <mistobaan@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8.1"
datasets = "^2.8.0"
transformers = "^4.25.1"
libcst = "^0.4.9"
jedi = "^0.18.2"
jellyfish = "^0.9.0"
tqdm = "^4.64.1"
docopt = "^0.6.2"
pystache = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
flake8 = "^6.0.0"
mypy = "^0.790"
pytest = "^6.1.2"
pre-commit = "^2.21.0"
isort = "^5.11.4"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party = "openbugger"
known_third_party = "numpy,torch,jedi,jellyfish,tqdm,libcst"

[tool.black]
target-version = ["py38"]
color = true
include = '\.pyi?$'
line_length = 88
exclude = 'logic/.*'

[tool.flake8]
max-line-length = 88
